feat: wire functional http downloads